--- a/tmux.conf
+++ b/tmux.conf
@@ -1,2 +1,33 @@
+unbind C-b
 set-option -g prefix 'C-\'
 setw -g mode-keys emacs
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour67
+
+# Reload key
+bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
+
+bind | split-window -h
+bind - split-window -v
+
+# default window title colors
+set-window-option -g window-status-fg cyan
+set-window-option -g window-status-bg default
+set-window-option -g window-status-attr dim
+setw -g window-status-format " #I #W "
+
+# active window title colors
+set-window-option -g window-status-current-fg colour235
+set-window-option -g window-status-current-bg colour175
+set-window-option -g window-status-current-attr bright
+setw -g window-status-current-format " #I #W "
+
+# command/message line colors
+set-option -g message-fg colour235
+set-option -g message-bg colour140
+set-option -g message-attr bright
+
+set-option -g status-right-length 60
+set-option -g status-right "#{?client_prefix,#[reverse]启动#[noreverse] ,} %H:%M %d-%b-%y"
