fixed tmux status bar format bug

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,4 +30,5 @@ set-option -g message-bg colour140
 set-option -g message-attr bright
 
 set-option -g status-right-length 60
-set-option -g status-right "#{?client_prefix,#[reverse]启动#[noreverse] ,} %H:%M %d-%b-%y"
+set-option -g status-right "#{?client_prefix,#[reverse]启动#[noreverse] ,} %H:%M:%S %d-%b-%y "
+set status-interval 1
